<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">

        <item android:title="Tài khoản cá nhân">
            <item
                android:id="@+id/nav_notification"
                android:title="@string/menu_notification" />
            <item
                android:id="@+id/nav_over_view"
                android:title="@string/menu_OverInformation" />
            <item
                android:id="@+id/nav_informationuser"
                android:title="@string/menu_information_user" />
        </item>


        <item android:title="Tra cứu">
            <item
            android:id="@+id/nav_list_invested_company"
            android:title="@string/menu_list_invested_company" />
            <item
            android:id="@+id/nav_list_company"
            android:title="@string/menu_list_company" />
            <item
                android:id="@+id/nav_statistic"
                android:title="@string/menu_Statistic" />
        </item>
</group>


</menu>
