<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_over_view">
    <fragment
        android:id="@+id/nav_notification"
        android:name="duongdd.se06000.p2plendingapplication.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_over_view"
        android:name="duongdd.se06000.p2plendingapplication.OverViewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_over_view" />

    <fragment
        android:id="@+id/nav_informationuser"
        android:name="duongdd.se06000.p2plendingapplication.InformationUserFragment"
        android:label="@string/menu_information_user"
        tools:layout="@layout/fragment_information_user" />

    <fragment
        android:id="@+id/nav_list_invested_company"
        android:name="duongdd.se06000.p2plendingapplication.ListInvestedCompanyFragment"
        android:label="@string/menu_list_invested_company"
        tools:layout="@layout/fragment_list_invested_company" />

    <fragment
        android:id="@+id/nav_list_company"
        android:name="duongdd.se06000.p2plendingapplication.ListCompanyFragment"
        android:label="@string/menu_list_company"
        tools:layout="@layout/fragment_list_company" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="duongdd.se06000.p2plendingapplication.StatisticFragment"
        android:label="@string/menu_Statistic"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="duongdd.se06000.p2plendingapplication.ContactUsFragment"
        android:label="@string/menu_Contact"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/nav_list_investment_calling"
        android:name="duongdd.se06000.p2plendingapplication.ListInvestmentCallingFragment"
        android:label="@string/menu_ListCalledInvestment"
        tools:layout="@layout/fragment_list_investment_calling"/>

</navigation>