<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:title="Tài khoản cá nhân">
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notification"
                android:title="@string/menu_notification" />
            <item
                android:id="@+id/nav_over_view"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_OverInformation" />
            <item
                android:id="@+id/nav_informationuser"
                android:icon="@drawable/ic_people"
                android:title="@string/menu_information_user" />
        </item>


        <item android:title="Tra cứu">
            <item
                android:id="@+id/nav_list_investment_calling"
                android:icon="@drawable/list"
                android:title="@string/menu_ListCalledInvestment" />
            <item
                android:icon="@drawable/ic_wallet"
                android:title="@string/menu_Addwallet" />
        </item>
        <item
              android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
              android:title="Thông tin liên hệ"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Đăng xuất"/>
    </group>


</menu>
